Added CORS, controller to serve wind files, dev and prod docker environments.

--- a/.env.dist
+++ b/.env.dist
@@ -13,4 +13,5 @@ GROUP_ID=1000
 ###> symfony/framework-bundle ###
 APP_ENV=prod
 APP_SECRET=ThisIsASecretChangeMe
+APP_ALLOWED_ORIGINS=*
 ###< symfony/framework-bundle ###
