--- a/symfony/.env
+++ b/symfony/.env
@@ -16,4 +16,5 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=ThisIsASecretChangeMe
+APP_ALLOWED_ORIGINS=*
 ###< symfony/framework-bundle ###
