--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -52,25 +52,17 @@ http {
             fastcgi_connect_timeout 10s;
             fastcgi_read_timeout    30s;
 
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param DOCUMENT_ROOT $document_root;
+            fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+            fastcgi_param DOCUMENT_ROOT $realpath_root;
 
             client_max_body_size 16m;
 
             internal;
         }
 
-        # Wind files
-        location ~ \.wind$ {
-            sendfile           on;
-            sendfile_max_chunk 1m;
-            tcp_nopush         on;
-            tcp_nodelay        on;
-            expires            1h;
-            access_log         off;
-            add_header         Pragma public;
-            add_header         Cache-Control "public, must-revalidate, proxy-revalidate";
-            add_header         Access-Control-Allow-Origin 'http://localhost:3000';
+        # Deny .php files
+        location ~ \.php$ {
+            return 404;
         }
 
         # Deny .ht* files
