--- a/symfony/config/routes.yaml
+++ b/symfony/config/routes.yaml
@@ -1,3 +1,12 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+index:
+    path: /
+    controller: App\Controller\IndexController
+
+wind:
+    path: /wind/{date}/{hour}/{resolution}-{type}.wind
+    controller: App\Controller\WindController
+    requirements:
+        date: '[0-9]{8}'
+        hour: '[0-9]{2}'
+        resolution: '1p00|0p50|0p25'
+        type: 'uv|ds'
