--- a/symfony/config/services.yaml
+++ b/symfony/config/services.yaml
@@ -4,7 +4,18 @@ services:
         autoconfigure: true
         bind:
             $projectDir: '%kernel.project_dir%'
+            $allowedOrigins: '%env(APP_ALLOWED_ORIGINS)%'
+
     App\:
         resource: '../src/'
         exclude:
+            - '../src/DependencyInjection/'
+            - '../src/Entity/'
             - '../src/Kernel.php'
+            - '../src/Tests/'
+            - '../src/Util/'
+
+    App\Controller\:
+        resource: '../src/Controller/'
+        tags: ['controller.service_arguments']
+
